{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 2637,
  "lineage": "96042ef6-638f-f29d-fa48-58b905c71816",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076da65c5fd1be4c2",
            "domain": "vpc",
            "id": "eipalloc-076da65c5fd1be4c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-127-209.compute-1.amazonaws.com",
            "public_ip": "34.234.127.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gatewayzzzz"
            },
            "tags_all": {
              "Name": "nat gatewayzzzz"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JURKINS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:034670134497:instance/i-0d13c50d43c829d89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d13c50d43c829d89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "souel-ine3-374",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0491d477461b84ea7",
            "private_dns": "ip-10-87-1-14.ec2.internal",
            "private_ip": "10.87.1.14",
            "public_ip": "34.227.79.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01cb5828462e6846c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01623bd88236abb0a",
            "tags": {
              "Name": "\u003cJURKINS-INSTANCE-WITH-THE-UD\u003e"
            },
            "tags_all": {
              "Name": "\u003cJURKINS-INSTANCE-WITH-THE-UD\u003e"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2e556556a54edeb"
            ]
          },
          "dependencies": [
            "aws_security_group.JURKINS",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:internet-gateway/igw-0e9f21a90234a93e5",
            "id": "igw-0e9f21a90234a93e5",
            "owner_id": "034670134497",
            "tags": {
              "Name": "project-1-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일"
            },
            "tags_all": {
              "Name": "project-1-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-first-terraform-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034670134497:loadbalancer/app/app1-load-balancer/66cd7e5c57c99940",
            "arn_suffix": "app/app1-load-balancer/66cd7e5c57c99940",
            "desync_mitigation_mode": "defensive",
            "dns_name": "app1-load-balancer-196312343.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:034670134497:loadbalancer/app/app1-load-balancer/66cd7e5c57c99940",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app1-load-balancer",
            "security_groups": [
              "sg-0e2e556556a54edeb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01623bd88236abb0a"
              },
              {
                "subnet_id": "subnet-09af95e70f0abdcbd"
              },
              {
                "subnet_id": "subnet-0de2b7b31902d947e"
              }
            ],
            "subnets": [
              "subnet-01623bd88236abb0a",
              "subnet-09af95e70f0abdcbd",
              "subnet-0de2b7b31902d947e"
            ],
            "tags": {
              "Name": "App1LoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1LoadBalancer",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "vpc_id": "vpc-0728d73384977fb36",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.JURKINS",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034670134497:listener/app/app1-load-balancer/66cd7e5c57c99940/08e678f52db2e7a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:034670134497:targetgroup/app1-target-group/4526d3c2caabc522",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:034670134497:listener/app/app1-load-balancer/66cd7e5c57c99940/08e678f52db2e7a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:034670134497:loadbalancer/app/app1-load-balancer/66cd7e5c57c99940",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my-first-terraform-VPC",
            "aws_lb_target_group.app1_tg",
            "aws_security_group.JURKINS",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:034670134497:targetgroup/app1-target-group/4526d3c2caabc522",
            "arn_suffix": "targetgroup/app1-target-group/4526d3c2caabc522",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:034670134497:targetgroup/app1-target-group/4526d3c2caabc522",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076da65c5fd1be4c2",
            "connectivity_type": "public",
            "id": "nat-0d66ba5535d97166d",
            "network_interface_id": "eni-0f25530dd50a5c6a4",
            "private_ip": "10.87.1.205",
            "public_ip": "34.234.127.209",
            "subnet_id": "subnet-01623bd88236abb0a",
            "tags": {
              "Name": "project-1-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일 번"
            },
            "tags_all": {
              "Name": "project-1-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일 번"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:route-table/rtb-062192ee2cf0761c5",
            "id": "rtb-062192ee2cf0761c5",
            "owner_id": "034670134497",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d66ba5535d97166d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:route-table/rtb-0aa9cd5a02c8ce936",
            "id": "rtb-0aa9cd5a02c8ce936",
            "owner_id": "034670134497",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9f21a90234a93e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da1dabd5dfd65bff",
            "route_table_id": "rtb-062192ee2cf0761c5",
            "subnet_id": "subnet-08eb1c141162b503c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c8788ba9d774ba",
            "route_table_id": "rtb-062192ee2cf0761c5",
            "subnet_id": "subnet-002e0ea7b4728661d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6582fb1074f05c1",
            "route_table_id": "rtb-062192ee2cf0761c5",
            "subnet_id": "subnet-0c46871bc59f3a6c3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1c",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00928c20bdd08cade",
            "route_table_id": "rtb-0aa9cd5a02c8ce936",
            "subnet_id": "subnet-01623bd88236abb0a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d1a523f974b47d",
            "route_table_id": "rtb-0aa9cd5a02c8ce936",
            "subnet_id": "subnet-0de2b7b31902d947e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01773bebf08308769",
            "route_table_id": "rtb-0aa9cd5a02c8ce936",
            "subnet_id": "subnet-09af95e70f0abdcbd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1c",
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "JURKINS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:security-group/sg-0e2e556556a54edeb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2e556556a54edeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jurkins",
            "name_prefix": "",
            "owner_id": "034670134497",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jurkins-",
              "Owner": "뚜",
              "Service": "SG"
            },
            "tags_all": {
              "Name": "jurkins-",
              "Owner": "뚜",
              "Service": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-1521-sg03-DB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:security-group/sg-01aa3ee1ee43ea860",
            "description": "This is the DB database ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01aa3ee1ee43ea860",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "project-1-DB",
            "name_prefix": "",
            "owner_id": "034670134497",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-443-sg03-DB01",
              "Owner": "앤드류",
              "Service": "DB",
              "planet": "내 꺼를 만들어자마!!!!!!!, 만들어지말라고 했다니까 내 꺼라고"
            },
            "tags_all": {
              "Name": "app1-443-sg03-DB01",
              "Owner": "앤드류",
              "Service": "DB",
              "planet": "내 꺼를 만들어자마!!!!!!!, 만들어지말라고 했다니까 내 꺼라고"
            },
            "timeouts": null,
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-08eb1c141162b503c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.87.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eb1c141162b503c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-07d795ecce2d9dbd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.87.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d795ecce2d9dbd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-002e0ea7b4728661d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.87.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e0ea7b4728661d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-0224f1e42e7393037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.87.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0224f1e42e7393037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-0c46871bc59f3a6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.87.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c46871bc59f3a6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1c-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-0bfed5db687013688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.87.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfed5db687013688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-01623bd88236abb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.87.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01623bd88236abb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-0de2b7b31902d947e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.87.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de2b7b31902d947e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:subnet/subnet-09af95e70f0abdcbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.87.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09af95e70f0abdcbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034670134497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-us-east-1c",
              "Owner": "뚜",
              "Planet": "바보",
              "Service": "application1"
            },
            "vpc_id": "vpc-0728d73384977fb36"
          },
          "dependencies": [
            "aws_vpc.my-first-terraform-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-first-terraform-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034670134497:vpc/vpc-0728d73384977fb36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.87.0.0/16",
            "default_network_acl_id": "acl-05cc9fe335e69ad34",
            "default_route_table_id": "rtb-06e888b91f096a412",
            "default_security_group_id": "sg-03609bf80f2a1bc3f",
            "dhcp_options_id": "dopt-0910a0fbfe3498dad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0728d73384977fb36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e888b91f096a412",
            "owner_id": "034670134497",
            "tags": {
              "Name": "project-1-My-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일"
            },
            "tags_all": {
              "Name": "project-1-My-VPC",
              "Owner": "강아지",
              "Planet": "몰라 알려줘",
              "Service": "애플 일"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}